--- a/templates/shared/base.html
+++ b/templates/shared/base.html
@@ -4,11 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <title>SUAP</title>
 </head>
+
 <body>
-   <h1>Pagina inicial do app Aluno</h1> 
-   <img src="{% static 'img\Captura de tela 2025-10-25 135301.png' %}" alt="">
+
+    {% include './partials/_header.html' %}
+    {% block content %} {% endblock %}
+    {% include './partials/_footer.html' %}
 </body>
+
 </html>
